@@ -28,9 +28,9 @@ Module::Build::Sqitch->new(
         'IPC::System::Simple'                          => '1.17',
         'List::Util'                                   => 0,
         'Locale::TextDomain'                           => '1.20',
-        'Moose'                                        => '1.15',
-        'Moose::Util::TypeConstraints'                 => '1.15',
-        'Moose::Meta::TypeConstraint::Parameterizable' => '1.15',
+        'Moose'                                        => '2.0300',
+        'Moose::Util::TypeConstraints'                 => '2.0300',
+        'Moose::Meta::TypeConstraint::Parameterizable' => '2.0300',
         'MooseX::Types::Path::Class'                   => '0.05',
         'namespace::autoclean'                         => '0.11',
         'Path::Class'                                  => 0,
